# SMBR-software

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  README.md  THIRD_PARTY_LICENSES.md  debug_launch.json
SMBR/: CMakeLists.txt
SMBR.Can/Modules/: CMakeLists.txt
SMBR.Can/Modules/include/SMBR/: CanModulesFactory.hpp
SMBR.Can/Modules/src/: BaseModule.cpp  BaseModule.hpp  CanCommonModule.cpp  CanCommonModule.hpp  CanControlModule.cpp  CanControlModule.hpp  CanCoreModule.cpp  CanCoreModule.hpp  CanModulesFactory.cpp  CanPumpsModule.cpp  CanPumpsModule.hpp  CanSensorModule.cpp  CanSensorModule.hpp  CanSystemModule.cpp  CanSystemModule.hpp  ModuleIssues.cpp  ModuleIssues.hpp  OjipMeasurementStorage.cpp  OjipMeasurementStorage.hpp
SMBR.Can/Modules/src/can/: CanBus.cpp  CanBus.hpp  CanChannel.cpp  CanChannel.hpp  CanMessage.cpp  CanMessage.hpp  CanRequest.cpp  CanRequest.hpp  CanRequestResponse.hpp  DummyCanBus.cpp  DummyCanBus.hpp  ICanChannel.cpp  ICanChannel.hpp
SMBR.Modules.Can/: CMakeLists.txt
SMBR.Modules.Can/src/: BaseModule.cpp  BaseModule.hpp  CanCommonModule.cpp  CanCommonModule.hpp  CanControlModule.cpp  CanControlModule.hpp  CanModulesFactory.cpp  CanSensorModule.hpp  CanSystemModule.cpp  SystemModule.cpp  SystemModule.hpp
SMBR.Modules.Can/src/can/: CanBus.cpp  CanRequest.hpp  CanRequestManager.cpp  CanRequestManager.hpp  CanRequestResponse.cpp  ICanChannel.cpp
SMBR.Modules.Virtual/: CMakeLists.txt
SMBR.Modules.Virtual/include/SMBR/: VirtualModulesFactory.hpp
SMBR.Modules.Virtual/include/SMBR/Proxy/: ProxyCommonModule.hpp  ProxyControlModule.hpp  (+4 more)
SMBR.Modules.Virtual/src/: Random.cpp  Random.hpp
SMBR.Modules.Virtual/src/Virtual/: VirtualCommonModule.cpp  VirtualCommonModule.hpp  VirtualControlModule.cpp  VirtualControlModule.hpp  VirtualCoreModule.cpp  VirtualCoreModule.hpp  VirtualSensorModule.cpp  VirtualSensorModule.hpp  VirtualSystemModule.cpp  VirtualSystemModule.hpp
SMBR.REST/: CMakeLists.txt
SMBR.REST/include/SMBR/: APIClient.hpp  APIScheduler.hpp  APITester.hpp  SMBRServer.hpp
SMBR.REST/src/: APIClientImpl.cpp  APIClientImpl.hpp  APIScheduler.cpp  APITester.cpp  AppComponent.hpp  SMBRController.cpp  SMBRController.hpp  SMBRControllerClient.hpp  SMBRServer.cpp
SMBR.REST/src/dto/: AeratorInfoDto.hpp  CaptureEnumDto.hpp  ChannelEnum.hpp  CollisionsDto.hpp  CurrentDto.hpp  CuvettePumpInfoDto.hpp  FlowrateDto.hpp  FluorometerCaptureStatusDto.hpp  FluorometerDetectorInfoDto.hpp  FluorometerEmitorInfoDto.hpp  FluorometerMeasurementDto.hpp  FluorometerOjipCaptureRequestDto.hpp  FluorometerSampleDto.hpp  FluorometerSingleSampleRequestDto.hpp  FluorometerSingleSampleResponseDto.hpp  FwVersionDto.hpp  HostnameDto.hpp  HwVersionDto.hpp  IntensitiesDto.hpp  IntensityDto.hpp  IpDto.hpp  LoadResponseDto.hpp  MessageDto.hpp  MixerInfoDto.hpp  ModelDto.hpp  ModuleActionRequestDto.hpp  ModuleEnum.hpp  ModuleInfoDto.hpp  ModuleIssueDto.hpp  ModuleIssuesListDto.hpp  MoveDto.hpp  MyCurrentDto.hpp  MyFlowrateDto.hpp  MyHostnameDto.hpp  MyIntensitiesDto.hpp  MyIntensityDto.hpp  MyIpDto.hpp  MyLoadResponseDto.hpp  MyModuleActionRequestDto.hpp  MyModuleInfoDto.hpp  (+48 more)
SMBR.REST/src/interceptors/: ErrorHandler.hpp  MyResponseInterceptor.hpp
SMBR.Scheduler/: CMakeLists.txt  README.md
SMBR.Scheduler/include/SMBR/: Interpreter.hpp  Parser.hpp  Recipes.hpp  Scheduler.hpp  Script.hpp
SMBR.Scheduler/recipes/: calibration.txt  control_demo.txt  doubleloop.txt  flashing.txt  measurement.txt  ojip_test.txt  sustain.txt
SMBR.Scheduler/recipes/experiments/: measurement.recipe  measurement_no_adapt.recipe
SMBR.Scheduler/recipes/macros/: calibration.recipe  clean_cuvette.recipe  prime_cuvette.recipe  purge_cuvette.recipe
SMBR.Scheduler/recipes/maintenance/: mix.recipe
SMBR.Scheduler/recipes/testing/: direct-recursion.recipe  indirect-recursion.recipe
SMBR.Scheduler/scripts/: flashing.txt  lights_on.txt  test1.txt  test2.txt  testKeepLight.txt
SMBR.Scheduler/src/: BasicCommands.cpp  BasicCommands.hpp  Interpreter.cpp  ModuleCommands.cpp  ModuleCommands.hpp  Parser.cpp  Recipes.cpp  Scheduler.cpp  Script.cpp
SMBR.Services/api-server/: CMakeLists.txt  api-server.service
SMBR.Services/api-server/src/: main-api-server.cpp
SMBR.Services/api-server/testing_scripts/: README.md  throughput_test.py
SMBR.Services/reactor-api-server/: CMakeLists.txt  reactor-api-server.properties  reactor-api-server.service
SMBR.Services/reactor-api-server/src/: main-api-server.cpp
SMBR.Services/reactor-core-module/: CMakeLists.txt  reactor-core-module.service
SMBR.Services/reactor-core-module/src/: core_module.hpp  interface_board.cpp  interface_board.hpp  main.cpp  main.hpp  rpi_host.cpp
SMBR.Services/reactor-web-control-ts/: CMakeLists.txt  reactor-web-control-ts.service
SMBR.Services/scheduler/: CMakeLists.txt
SMBR.Services/scheduler/scripts/: test1.txt
SMBR.Services/scheduler/src/: scheduler.cpp
SMBR.Services/smbr-firmware-update/: CMakeLists.txt  smbr-firmware-update.service
SMBR.Services/smbr-firmware-update/firmware/: application_codes.py  identify_modules.py  query_katapult_nodes.py  update_all_modules.py  version.txt
SMBR.Utilities/reactor-firmware-update/: CMakeLists.txt  update_firmware.sh
SMBR.Utilities/reactor-firmware-update/firmware/: Readme.md  application_codes.py  flash_module.py  update_all_modules.py  version.txt
SMBR.Utilities/reactor-script-api/: CMakeLists.txt
SMBR.Utilities/reactor-script-api/src/: main-script-runner-api.cpp
SMBR.Utilities/script-doc-generator/: CMakeLists.txt  template.md
SMBR.Utilities/script-doc-generator/src/: script-doc-generator.cpp
SMBR.Utilities/script-runner-can/: CMakeLists.txt
SMBR.Utilities/script-runner-can/src/: main-script-runner-can.cpp
SMBR/include/SMBR/: CallAtStartup.hpp  Exceptions.hpp  FutureHelpers.h  ICommonModule.hpp  IControlModule.hpp  ICoreModule.hpp  IModuleIssues.hpp  IPumpsModule.hpp  IRecipes.hpp  IScheduler.hpp  ISensorModule.hpp  ISystemModule.hpp  Log.hpp  SMBR.hpp
SMBR/src/: Exceptions.cpp  ICoreModule.cpp  IScheduler.cpp  ISystemModule.cpp  Log.cpp  SMBR.cpp
(+146 files in other folders)
